--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>
   {{title}}
 </h1>
+<h1>Meal Tracker</h1>
+ <app-meal-list></app-meal-list>
+ <app-edit-meal></app-edit-meal>
+ <app-new-meal></app-new-meal>
