display list of meals in template

--- a/src/app/meal-list/meal-list.component.html
+++ b/src/app/meal-list/meal-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  meal-list works!
-</p>
+<div class="row">
+  <div class="col-sm-4" *ngFor= 'let meal of childMealList'>
+    <p>Meal: {{meal.name}}</p>
+    <p>Calories: {{meal.calorie}}</p>
+    <p>Details: {{meal.details}}</p>
+    <div class="image-section">
+      <img class="food-image" src={{meal.image}} alt={{meal.name}}>
+    </div>
+  </div>
+</div>
