add new-meal form to template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>
   {{title}}
 </h1>
-<div class="container">  
-  <h1>Meal Tracker</h1>
+<div class="container">
+  <h1><u>Meal Tracker</u></h1>
   <app-meal-list [childMealList]="masterMealList"></app-meal-list>
   <app-edit-meal></app-edit-meal>
   <app-new-meal></app-new-meal>
