--- a/src/app/meal-list/meal-list.component.html
+++ b/src/app/meal-list/meal-list.component.html
@@ -4,7 +4,7 @@
     <p>Calories: {{meal.calorie}}</p>
     <p>Details: {{meal.details}}</p>
     <div class="image-section">
-      <img class="food-image" src={{meal.image}} alt={{meal.name}}>
+      <img class="meal-image" src={{meal.image}} alt={{meal.name}}>
     </div>
   </div>
 </div>
