--- a/src/app/new-meal/new-meal.component.html
+++ b/src/app/new-meal/new-meal.component.html
@@ -1,3 +1,15 @@
-<p>
-  new-meal works!
-</p>
+<div class="row">
+  <form class="form-group col-sm-6">
+    <h3>Add New Meal</h3>
+    <label>Enter name of food:</label>
+    <input #newName class="form-control">
+    <label>Enter number of calories:</label>
+    <input #newCalorie class="form-control">
+    <label>Enter details about this meal:</label>
+    <input #newdetails class="form-control">
+    <label>Enter url to an image:</label>
+    <input #newImage class="form-control">
+    <br>
+    <button class="btn btn-success">Add meal</button>
+  </form>
+</div>
