display new-meal in template

--- a/src/app/new-meal/new-meal.component.html
+++ b/src/app/new-meal/new-meal.component.html
@@ -6,10 +6,10 @@
     <label>Enter number of calories:</label>
     <input #newCalorie class="form-control">
     <label>Enter details about this meal:</label>
-    <input #newdetails class="form-control">
+    <input #newDetails class="form-control">
     <label>Enter url to an image:</label>
     <input #newImage class="form-control">
     <br>
-    <button class="btn btn-success">Add meal</button>
+    <button class="btn btn-success" (click)="submitForm(newName.value, newCalorie.value, newDetails.value, newImage.value);">Add meal</button>
   </form>
 </div>
