--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 <div class="container">
   <h1><u>Meal Tracker</u></h1>
   <app-meal-list [childMealList]="masterMealList"></app-meal-list>
+  <app-new-meal (newMealSender)="addMeal($event)"></app-new-meal>
   <app-edit-meal></app-edit-meal>
-  <app-new-meal></app-new-meal>
 </div>
