--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </h1>
 <div class="container">
   <h1><u>Meal Tracker</u></h1>
-  <app-meal-list [childMealList]="masterMealList"></app-meal-list>
+  <app-meal-list [childMealList]="masterMealList" (clickSender)="editMeal($event)"></app-meal-list>
+  <app-edit-meal [childSelectedMeal]="selectedMeal"></app-edit-meal>
   <app-new-meal (newMealSender)="addMeal($event)"></app-new-meal>
-  <app-edit-meal></app-edit-meal>
 </div>
