--- a/src/app/meal-list/meal-list.component.html
+++ b/src/app/meal-list/meal-list.component.html
@@ -6,5 +6,6 @@
     <div class="image-section">
       <img class="meal-image" src={{meal.image}} alt={{meal.name}}>
     </div>
+    <button click="editMeal(meal)">Edit this meal</button>
   </div>
 </div>
