add pipe to check calorie intake

--- a/src/app/edit-meal/edit-meal.component.html
+++ b/src/app/edit-meal/edit-meal.component.html
@@ -1,12 +1,19 @@
+
 <div *ngIf="childSelectedMeal">
-  <h3>Edit {{childSelectedMeal.name}}:</h3>
-  <label>Change name to:</label>
-  <input type="text" [(ngModel)]="childSelectedMeal.name">
-  <label>Change calories to:</label>
-  <input type="number" [(ngModel)]="childSelectedMeal.calorie">
-  <label>Change details to:</label>
-  <input type="text" [(ngModel)]="childSelectedMeal.details">
-  <label>Change image to:</label>
-  <input type="text" [(ngModel)]="childSelectedMeal.image">
-  <button class="btn btn-default"></button>
+  <hr>
+  <div class="row">
+    <div class="col-sm-6">
+      <h3>Edit {{childSelectedMeal.name}}:</h3>
+      <label>Change name to:</label>
+      <input class="form-control" type="text" [(ngModel)]="childSelectedMeal.name">
+      <label>Change calories to:</label>
+      <input class="form-control" type="number" [(ngModel)]="childSelectedMeal.calorie">
+      <label>Change details to:</label>
+      <input class="form-control" type="text" [(ngModel)]="childSelectedMeal.details">
+      <label>Change image to:</label>
+      <input class="form-control" type="text" [(ngModel)]="childSelectedMeal.image">
+      <button (click)="saveChanges()" class="btn btn-info">Save changes</button>
+    </div>
+  </div>
+  <hr>
 </div>
