--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 <div class="container">
   <h1><u>Meal Tracker</u></h1>
   <app-meal-list [childMealList]="masterMealList" (clickSender)="editMeal($event)"></app-meal-list>
-  <app-edit-meal [childSelectedMeal]="selectedMeal"></app-edit-meal>
+  <app-edit-meal [childSelectedMeal]="selectedMeal" (saveChangesSender)="finishedChanges()"></app-edit-meal>
   <app-new-meal (newMealSender)="addMeal($event)"></app-new-meal>
 </div>
